Fix SyntaxError caused by import statement outside a module
Resolve SyntaxError caused by import statement outside a module in test file.

* **Test File**: Replace the import statement with a require statement in `packages/helloworld/test/index.test.ts`.
* **TypeScript Configuration**: Update `packages/helloworld/tsconfig.json` to include test files for compilation.
* **Jest Configuration**: Add Jest configuration in `packages/helloworld/package.json` to handle ES6 modules.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/ubinix-warun/lerna-typescript-project-template?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -14,5 +14,11 @@
     "typescript": "^4.0.0",
     "jest": "^26.0.0",
     "@types/jest": "^26.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testEnvironment": "node"
   }
 }
