--- a/packages/helloworld/tsconfig.json
+++ b/packages/helloworld/tsconfig.json
@@ -9,6 +9,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules"]
 }
