--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "typescript": "^4.0.0",
     "jest": "^26.0.0",
-    "@types/jest": "^26.0.0"
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.0"
   },
   "jest": {
     "transform": {
