--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -11,15 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "jest": "^26.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.0"
+    "@types/jest": "^29.0.0",
+    "@types/node": "^22.0.0",
+    "jest": "^29.0.0",
+    "typescript": "^4.0.0"
   },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testEnvironment": "node"
+  "dependencies": {
+    "ts-jest": "^29.2.6"
   }
 }
