--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -11,12 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/node": "^22.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
     "jest": "^29.0.0",
+    "ts-jest": "^29.2.6",
     "typescript": "^4.0.0"
-  },
-  "dependencies": {
-    "ts-jest": "^29.2.6"
   }
 }
