--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,8 @@ jobs:
       - name: Run unit tests
         run: npm test --workspaces
 
+      - name: Install Antora
+        run: npm install -g @antora/cli @antora/site-generator-default
+
       - name: Generate documentation
         run: antora antora-playbook.yml
