--- a/packages/helloworld/package.json
+++ b/packages/helloworld/package.json
@@ -16,5 +16,17 @@
     "jest": "^29.0.0",
     "ts-jest": "^29.2.6",
     "typescript": "^4.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest", 
+        {
+          "tsconfig": "tsconfig.json"
+        }
+      ]
+    },
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
