Support test coverage on lerna mono repo, typescript and jest
Fixes #3

Add comprehensive test coverage reporting for the Lerna monorepo using TypeScript and Jest.

* **Jest Configuration**:
  - Enable coverage collection and add coverage reporters in `packages/helloworld/jest.config.js`.
  - Set coverage thresholds to enforce minimum coverage percentages.

* **Root Package Configuration**:
  - Add a script `test:coverage` in `package.json` to run Jest with coverage across all packages.

* **CI/CD Integration**:
  - Add steps in `.github/workflows/ci.yml` to run Jest with coverage and upload coverage reports to Codecov.

* **Documentation**:
  - Update `README.md` to include instructions on running tests and viewing coverage reports.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/ubinix-warun/lerna-typescript-project-template/issues/3?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,18 @@ jobs:
       - name: Run unit tests
         run: npm test --workspaces
 
+      - name: Run Jest with coverage
+        run: npm run test:coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/*.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
+
       # - name: Install Antora
       #   run: npm install -g @antora/cli @antora/site-generator-default
 
