--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "lerna run build",
     "test": "lerna run test",
-    "generate-docs": "antora antora-playbook.yml"
+    "generate-docs": "antora antora-playbook.yml",
+    "test:coverage": "lerna run test -- --coverage"
   },
   "devDependencies": {
     "lerna": "^4.0.0",
