--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,23 +36,8 @@ jobs:
       - name: Run Jest with coverage
         run: npm run test:coverage
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v2
+      - name: Upload coverage reports to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/*.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
-
-      # - name: Install Antora
-      #   run: npm install -g @antora/cli @antora/site-generator-default
-
-      # - name: Generate documentation
-      #   run: antora antora-playbook.yml
-
-      # - name: Publish documentation to GitHub Pages
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./public
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./coverage/lcov-report
